# cam-align

./: .gitignore  README.md  agent.md  planning.md  pyproject.toml  requirements.txt  run_app.py
src/cam_align_tool/: app.py
src/cam_align_tool/config/: logging_utils.py  settings.py
src/cam_align_tool/core/: engine.py  inspect.py  models.py  postcheck.py  regenerate.py  transforms.py
src/cam_align_tool/ui/: main_window.py  video_provider.py
